<resources>
    <string name="app_name">Shopon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="onemorebtn">oneMoreBtn</string>
    <string name="onelessbtn">oneLessBtn</string>
    <string name="productimage">productImage</string>
    <string name="cartproductimage">cartProductImage</string>
    <string name="ok">Ok</string>
    <string name="your_order_has_been_placed">Your order has been placed.</string>
    <string name="order_placed">Order Placed</string>
    <string name="itemimage">itemImage</string>
    <string name="electronics">Electronics</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="jewelery">Jewelery</string>
    <string name="all">All</string>
    <string name="select_variant">Select a variant</string>
    <string name="tax_deduction">TAX deduction</string>
    <string name="total_amount">Total Amount</string>
    <string name="_5">5%</string>
    <string name="summary">Summary</string>
</resources>